--- a/platformio.ini
+++ b/platformio.ini
@@ -443,7 +443,7 @@ custom_usermods = audioreactive
 board = esp32dev
 platform = ${esp32.platform}
 platform_packages = ${esp32.platform_packages}
-custom_usermods = audioreactive usermod_rotaryrackdimmer
+custom_usermods = usermod_rotaryrackdimmer
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags} ${esp32.build_flags} -D WLED_RELEASE_NAME=\"ESP32\" #-D WLED_DISABLE_BROWNOUT_DET 
   -D USERMOD_ROTARYRACKDIMMER
